# fallliste_rust

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
test/: test_fallliste.py
