[package]
name = "fallliste_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fallliste_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
md5 = "0.7"

[profile.release]
opt-level = 3         # Default for --release
lto = "fat"           # Link Time Optimization (reduces size and may speed up)
codegen-units = 1     # Slower compile, faster runtime
strip = true          # Removes symbols from the final binary
